--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="https://www.youtube.com/" class="twitter"><i class="bi bi-youtube"></i></a>
         <a href="https://mail.google.com/mail/u/0/?tab=rm#inbox" class="facebook"><i class="bi bi-envelope"></i></a>
         <a href="https://instagram.com/athira._ramesh_?utm_medium=copy_link" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/athira-ramesan-834a20183" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -82,7 +82,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Web Developer</h3>
           <p class="fst-italic">
-          Skilled and motivated Full-stack developer with 5+ years of experience. Created 60+ websites. Advanced in Python-Django, React, HTML, CSS, JavaScript. JQuery. Received 95% positive feedback from management for punctuality, presentability, and flexibility. 
+          Skilled and motivated Full-stack developer with 1 year of experience. Created 2 websites. Advanced in Python-Django, React, HTML, CSS, JavaScript. JQuery. Received 95% positive feedback for punctuality, presentability, and flexibility. 
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -118,7 +118,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
             <p>Happy Clients</p>
           </div>
         </div>
@@ -126,7 +126,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="99" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
         </div>
@@ -142,7 +142,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
             <p>Awards</p>
           </div>
         </div>
@@ -319,9 +319,9 @@
             <p><em>Address</em></p>
             <p>
             <ul>
-              <li>"Kottayt House", Ayithara Mambaram, Koothuparamba, Kannur, Kerala</li>
-              <li>+91 7592964574</li>
-              <li>athiraramesh8593@gmail.com</li>
+              <li>"Sruthilayam", Kannur, Kerala</li>
+              <li>+91 7596544574</li>
+              <li>athiraramesh123@gmail.com</li>
             </ul>
             </p>
           </div>
@@ -384,9 +384,9 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
+            <div class="icon"><i class="ri-computer-line"></i></div>
             <h4><a href="">WEB DEVELOPMENT</a></h4>
             <p>Creative web developer dedicated to developing and optimizing interactive, user-friendly, and feature-rich websites</p>
           </div>
@@ -394,7 +394,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
+            <div class="icon"><i class="ri-macbook-line"></i></div>
             <h4><a href="">WEB DESIGN</a></h4>
             <p>As a web designer, my objective is to make a positive impact on clients, co-workers, and the Internet using my skills and experience to design compelling and attractive websites.</p>
           </div>
@@ -402,17 +402,38 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <div class="icon"><i class="ri-macbook-fill"></i></div>
             <h4><a href="">RESPONSIVE DESIGN</a></h4>
-            <p>Web Designer with 10+ years of experience in web design. Comprehensive experience with Visual Design,  Responsive and Mobile Web & Custom CMS design.</p>
+            <p>Web Designer with 1 year of experience in web design. Comprehensive experience with Visual Design,  Responsive and Mobile Web & Custom CMS design.</p>
           </div>
         </div>
 
-        
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="ri-computer-line"></i></div>
+            <h4><a href="">UI/UX Design</a></h4>
+            <p>Creative UI/UX developer dedicated to developing and optimizing interactive, user-friendly, and feature-rich websites</p>
+          </div>
+        </div>
 
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-envelope"></i></div>
+            <h4><a href="">Web and Mail Hosting</a></h4>
+            <p>I provide a high performance, low cost web hosting solution and offer a wide range of flexible products coupled with unrivalled customer care</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-text"></i></div>
+            <h4><a href="">Content Management</a></h4>
+            <p>I promote the use of CMS software for all our customers, as it doesn't just give customers the freedom of controlling their own website, but at the same time it educates the customer on the web and it's advantages.</p>
+          </div>
+        </div>
+        </div>
       </div>
-
-    </div>
+  </div>
   </section><!-- End Services Section -->
 
   <!-- ======= Portfolio Section ======= -->
@@ -519,7 +540,7 @@
         </div>
 
       </div>
-
+</div>
     </div>
   </section><!-- End Portfolio Section -->
 
@@ -593,12 +614,12 @@
         </div>
         <div class="form-group mt-3">
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-        </div>
-        <div class="my-3">
+        </div><br>
+        <!-- <div class="my-3">
           <div class="loading">Loading</div>
           <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
-        </div>
+        </div> -->
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
     </div>
