--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
           </div>
           <p>
-            Seeking a Full-stack developer position with a company which will require me to utilize my skills, abilities and experience in the IT field to ensure the company's success
+            Seeking a Full-stack developer position with a company which will require me to utilize my skills, abilities and experience in the IT field to ensure the company's success. Creative web developer dedicated to building and optimizing the performance of user-centric, high-impact websites for companies. Leverage technical, analytical and problem-solving skills to create dynamic, high-speed websites, apps and platforms fueling competitive advantage and revenue growth
           </p>
         </div>
       </div>
